Replace usage of methods deprecated in JDK9.